# NotYourAverageRaspberryPiRepo

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  main.py  pyproject.toml  requirements.txt  strava_script.py
NYARPR/StravaVisualiser/: __init__.py  access_activities.py  access_information.py  generate_images.py
