[tool.poetry]
name = "notyouraverageraspberrypirepo"
version = "0.1.0"
description = ""
authors = ["RyanBalshaw <ryanbalshaw81@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"
ruff = "^0.1.6"
interrogate = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
